# rest_server

./: .gitignore  CMakeLists.txt  README.md
conf/: store.json
include/jwt/: base.hpp  jwt.hpp
source/: auth_handler.cpp  auth_handler.hpp  auth_manager.cpp  auth_manager.hpp  basic_controller.cpp  basic_controller.hpp  conn_pool_config.hpp  controller.hpp  crypto_utils.cpp  crypto_utils.hpp  db_exception.hpp  db_pool_singleton.cpp  db_pool_singleton.hpp  health_handler.cpp  health_handler.hpp  interupt_handler.hpp  main.cpp  microsvc_controller.cpp  microsvc_controller.hpp  pool_config.hpp  user_handler.cpp  user_handler.hpp  user_manager.cpp  user_manager.hpp
test/: auth_handler_test.cpp  auth_handler_test.hpp  auth_manager_test.cpp  auth_manager_test.hpp  crypto_utils_test.cpp  main_test.cpp  user_manager_test.cpp  user_manager_test.hpp
